@@ -19,6 +19,12 @@
 int init_connection(const char *socket_path);
 
 /*
+ * Destroy the connection to i3.
+ *
+ */
+void destroy_connection();
+
+/*
  * Sends a Message to i3.
  * type must be a valid I3_IPC_MESSAGE_TYPE (see i3/ipc.h for further information)
  *
